# suneigen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  environment.devenv.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  ci_linux.yml  ci_linux.yml.in  ci_osx.yml  ci_osx.yml.in  ci_windows.yml  conda.yml  format.yml  pip.yml  pip.yml.in  wheels.yml
app/: CMakeLists.txt  main.cpp  model_robertson.cpp
cmake/: CodeCoverage.cmake  Colors.cmake  Doctest.cmake  Documentation.cmake  FindEigen3.cmake  LTO.cmake  Misc.cmake  ThirdParty.cmake  Warnings.cmake
cmake/Modules/: FindDoctest.cmake  FindEigen3.cmake  FindSUNDIALS.cmake  FindSciplot.cmake
conda.recipe/: meta.yaml
include/: NVectorEigen.hpp  abstract_model.h  config.h.in  defines.h  example.h  exception.h  forward_problem.h  misc.h  model.h  model_dimensions.h  model_ode.h  model_state.h  nvector_eigen.hpp  return_data.h  simulation_parameters.h  solver.h  solver_cvodes.h  sundials_linsol_wrapper.h  sundials_matrix_wrapper.h  suneigen.h  suneigen_exception.h  sunlinsol_superlu.h  vector.h
python/: main.cpp  parseOptions.cpp  parseOptions.h  py_model_ode.cpp  py_model_ode.h  pycvodes.cpp  pycvodes.h
scripts/: buildSundials.ps1  buildSundials.sh  build_sundials.sh
src/: NVectorEigen.cpp  abstract_model.cpp  exception.cpp  forward_problem.cpp  misc.cpp  model.cpp  model_ode.cpp  model_state.cpp  nvector_eigen.cpp  return_data.cpp  solver.cpp  solver_cvodes.cpp  sundials_linsol_wrapper.cpp  sundials_matrix_wrapper.cpp  suneigen.cpp  suneigen_exception.cpp  sunlinsol_superlu.cpp  vector.cpp
tests/: CMakeLists.txt  cvsRoberts_dns.cpp  dummy.cpp  model_robertson.cpp  model_robertson.h  test_model_robertson.cpp  test_nvector_eigen.cpp  test_sunlinsol_superlu.cpp
tests/models/: model_robertson.cpp  model_robertson.h
tests/python/: test_basic.py  test_cvodes.py
